fix: better fix for scrollbar consistency
only force y scrollbar

--- a/global.css
+++ b/global.css
@@ -13,7 +13,7 @@ h6 {
 }
 
 body {
-    overflow: scroll; /* Show scrollbars */
+    overflow-y: scroll; /* Show scrollbars */
   }
 
 /* 
